# vnm_terminal_surface

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dirty_row_lazy_snapshot_plan.md
benchmarks/: CMakeLists.txt
benchmarks/embedded_terminal/: CMakeLists.txt  embedded_terminal_benchmark.cpp  validate_requested_grid_mismatch_failure.cmake
benchmarks/input_echo_catchup/: CMakeLists.txt  input_echo_catchup_benchmark.cpp  input_echo_ordering_benchmark.cpp
benchmarks/lazy_snapshot_evidence/: CMakeLists.txt  lazy_snapshot_evidence_benchmark.cpp
benchmarks/lazy_snapshot_replay/: CMakeLists.txt  lazy_snapshot_replay_benchmark.cpp
benchmarks/phase7_public_scroll/: CMakeLists.txt  phase7_public_scroll_benchmark.cpp
benchmarks/public_scroll/: CMakeLists.txt  public_scroll_benchmark.cpp
benchmarks/surface_stress/: CMakeLists.txt  terminal_surface_stress_benchmark.cpp  validate_surface_stress_descriptor_contract.cmake
cmake/: vnm_terminal_msdf_text_dependency.cmake  vnm_terminal_qt_posture.cmake  vnm_terminal_surfaceConfig.cmake.in
docs/: README.md  architecture.md  backend_lifecycle_and_signals.md  change_to_test_matrix.md  developer_orientation.md  diagnostics_api_usage.md  diagnostics_schema.md  gpu_atlas_renderer_plan.md  history_magic_ring_buffer_plan.md  immediate_public_scroll_architecture.md  immediate_public_scroll_implementation_plan.md  immediate_public_scroll_phase7_benchmark_results.json  immediate_public_scroll_phase7_report.md  lcd_subpixel_glyph_atlas_plan.md  msdf_text_renderer_handover_20260606.md  public_surface.md  qt_rendering_policy.md  render_snapshot_contract.md  repository_guide.md  selection_and_provenance.md  selection_lifetime_design.md  selection_lifetime_implementation.md  selection_lifetime_phase1_inventory.md  selection_lifetime_phase2_content_basis.md  selection_lifetime_phase4_payload_source.md  selection_lifetime_phase5_visual_lease.md  selection_row_provenance_manual_validation.md  selection_row_provenance_plan.md  synchronized_output.md  terminal_conformance_oracles.md  terminal_reference_inventory.md  terminal_sequence_matrix.md  terminal_text_representation_plan.md  unicode_width_policy.md
resources/: vnm_terminal_surface.qrc
src/: backend_output_capture.cpp  font_metrics.cpp  interaction_trace.cpp  linux_pty_backend.cpp  metrics_contract.cpp  native_backend_io_core.cpp  native_backend_io_core.h  posix_pty_backend.cpp  qsg_atlas_font_bytes.cpp  qsg_atlas_renderer.cpp  qsg_atlas_renderer_stage1.cpp  qsg_rhi_stage0_probe.cpp  qsg_terminal_renderer.cpp  qt_grid_metrics_provider.cpp  selection_contract.cpp  (+22 more)
tests/: CMakeLists.txt  expect_capture_file.cmake  expect_process_result.cmake  vnm_terminal_test_process.h
tests/backend_output_capture/: backend_output_capture_tests.cpp
tests/backend_session/: backend_session_tests.cpp
tests/behavior_smoke/: behavior_smoke_tests.cpp
tests/compat_smoke/: compat_smoke_tests.cpp
tests/conformance/: README.md  capture_replay_conformance_tests.cpp  conformance_fixture_io.h  libvterm_differential_tests.cpp  parser_libfuzzer_harness.cpp  unicode_data_conformance_tests.cpp
tests/conformance/captures/: alternate_screen_restore.vnm_capture  cr_el_progress_redraw.vnm_capture  primary_scrollback_alt_preserved.vnm_capture  same_text_style_dirty_coverage.vnm_capture  scrollback_long_prompt.vnm_capture  synchronized_output_final_state.vnm_capture  tmux_pane_border_redraw.vnm_capture  tui_partial_redraw.vnm_capture  utf8_title_payload.vnm_capture  wide_combining_prompt.vnm_capture
tests/diagnostics_schema/: schema_sync_tests.cpp
tests/diagnostics_text_layout/: diagnostics_text_layout_tests.cpp
tests/helpers/: decode_hex.h  primary_backing_observation.h  primary_backing_test_config.h  test_check.h
tests/history_ring/: history_ring_tests.cpp
tests/history_row_record_codec/: history_row_record_codec_tests.cpp  history_row_record_phase8_benchmark.cpp  history_row_traversal_tests.cpp  retained_history_benchmark.cpp  retained_history_capacity_stress.cpp
tests/input_encoder/: input_encoder_tests.cpp
tests/interaction_trace/: interaction_trace_tests.cpp
tests/lazy_snapshot_correctness_stress/: lazy_snapshot_correctness_stress_tests.cpp
tests/linux_pty_backend/: linux_pty_backend_tests.cpp
tests/package_smoke/: CMakeLists.txt  expect_consumer_builds.cmake  expect_private_qt_minor_mismatch.cmake  main.cpp
tests/parser_ir/: parser_ir_tests.cpp
tests/parser_randomized/: ascii_wrap_scroll.vnm_seed  control_sequence_title.vnm_seed  parser_randomized_tests.cpp  string_recovery_query.vnm_seed  utf8_wide_boundary.vnm_seed
tests/posix_pty_backend/: posix_pty_backend_tests.cpp
tests/profile_text/: profile_text_tests.cpp
tests/profiler/: hierarchical_profiler_tests.cpp
tests/qsg_atlas/: atlas_tests.cpp
tests/qsg_atlas_stage1/: atlas_stage1_tests.cpp
tests/qsg_render/: qsg_render_tests.cpp
tests/qsg_rhi_stage0_probe/: rhi_stage0_probe_tests.cpp
tests/qsg_text_node/: qsg_text_node_tests.cpp
tests/qt_metrics/: qt_metrics_tests.cpp
tests/qt_posture/: qt_posture_tests.cpp
tests/qt_render_smoke/: render_smoke_tests.cpp
tests/render_cell_text/: render_cell_text_tests.cpp
tests/render_frame/: render_frame_tests.cpp
tests/render_snapshot/: render_snapshot_tests.cpp
tests/resource_lifecycle/: resource_lifecycle_tests.cpp
tests/screen_alternate/: alternate_screen_tests.cpp
tests/screen_basic/: basic_model_tests.cpp
tests/screen_operations/: model_ops_tests.cpp
tests/screen_sgr/: sgr_model_tests.cpp
tests/sequence_matrix/: sequence_matrix_tests.cpp
tests/shaping_contract/: shaping_contract_tests.cpp
tests/surface_host/: surface_host_tests.cpp
tests/terminal_canvas_fixture/: terminal_canvas_fixture_tests.cpp
tests/terminal_modes/: private_modes_tests.cpp
tests/transcript/: transcript_tests.cpp
tests/unicode_width/: unicode_width_tests.cpp
tests/unicode_width_tables/: unicode_width_tables_tests.cpp
tests/viewport/: viewport_controller_tests.cpp
tests/windows_conpty_backend/: windows_conpty_backend_tests.cpp
(+179 files in other folders)
